Bug 137019 - [CSS Grid Layout] Fix the handling of infinity in track growth limits
Summary: [CSS Grid Layout] Fix the handling of infinity in track growth limits
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Sergio Villar Senin
URL:
Keywords:
Depends on:
Blocks: 60731
  Show dependency treegraph
 
Reported: 2014-09-23 02:15 PDT by Sergio Villar Senin
Modified: 2014-10-15 04:44 PDT (History)
6 users (show)

See Also:


Attachments
Patch (14.77 KB, patch)
2014-09-23 02:32 PDT, Sergio Villar Senin
darin: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio Villar Senin 2014-09-23 02:15:16 PDT
[CSS Grid Layout] Fix the handling of infinity in track growth limits
Comment 1 Sergio Villar Senin 2014-09-23 02:32:34 PDT
Created attachment 238526 [details]
Patch
Comment 2 Sergio Villar Senin 2014-09-26 06:42:10 PDT
Committed r174006: <http://trac.webkit.org/changeset/174006>